// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VExpansionPanel should hide actions and match snapshot 1`] = `
<div class="v-expansion-panel"
     aria-expanded="false"
>
  <button class="v-expansion-panel-header"
          type="button"
          aria-expanded="false"
  >
  </button>
</div>
`;

exports[`VExpansionPanel should hide actions and match snapshot 2`] = `
<div class="v-expansion-panel"
     aria-expanded="false"
>
  <button class="v-expansion-panel-header"
          type="button"
          aria-expanded="false"
  >
    <div class="v-expansion-panel-header__icon">
      <i class="v-icon notranslate theme--light mdi mdi-chevron-down"
         aria-hidden="true"
      >
      </i>
    </div>
  </button>
  <div class="v-expansion-panel-content"
       style="display: none;"
  >
    <div class="v-expansion-panel-content__wrap">
    </div>
  </div>
</div>
`;
